--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,25 +7,21 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Recipe List</a>
+                    <a class="nav-link" [routerLink]="['/recipes']" routerLinkActive="router-link-active" >Recipe List</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Shopping List</a>
+                    <a class="nav-link" [routerLink]="['/shopping-list']" routerLinkActive="router-link-active" >Shopping List</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" role="button">Manage</a>
-                    <ul class="dropdown-menu">
-                        <li class="nav-item">
-                            <a href="#">Save Data</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#">Fetch Data</a>
-                        </li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Save Data</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Fetch Data</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+<br><br>
