--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,13 @@
 <div class="row">
-    <div class="col-xs-10">
+    <div class="col-xl-10">
         <app-shopping-edit></app-shopping-edit>
         <hr>
-        <p>The shopping list</p>
+        <ul class="list-group">
+            <a class="list-group-item" style="cursor: pointer;" 
+            *ngFor="let ingredient of ingredients; let i=index"
+            (click)="onClickIngredient(i)">
+                {{ ingredient.name }}({{ ingredient.amount }})
+            </a>
+        </ul>
     </div>
 </div>
