http request implemented

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,10 +15,10 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Save Data</a>
+                    <a class="nav-link" (click)="saveDataOnFirebase()" type="button">Save Data</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Fetch Data</a>
+                    <a class="nav-link" (click)="fetchDataOnFirebase()" type="button">Fetch Data</a>
                 </li>
             </ul>
         </div>
