--- a/src/app/recipes/edit-recipe/edit-recipe.component.html
+++ b/src/app/recipes/edit-recipe/edit-recipe.component.html
@@ -3,7 +3,9 @@
         <form class="form-group" [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xl-12 form-group">
-                    <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
+                    <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">
+                        {{ editMode ? "Update" : "Save" }}
+                    </button>
                     <button class="btn btn-danger" type="button" (click)="onClear()">Cancel</button>
                 </div>
             </div>
@@ -16,7 +18,7 @@
             <div class="row">
                 <div class="col-xl-12 form-group">
                     <label for="path">Image URL</label>
-                    <input type="text" id="path" class="form-control" formControlName="path">
+                    <input type="text" id="path" class="form-control" formControlName="imagePath">
                 </div>
             </div>
             <div class="row">
@@ -28,7 +30,7 @@
                 <div class="col-xl-12 form-group">
                     <label for="desc">Description</label>
                     <textarea class="form-control" 
-                    id="desc" name="desc" rows="5" formControlName="desc"></textarea>
+                    id="desc" name="description" rows="5" formControlName="description"></textarea>
                 </div>
             </div>
             <div class="row">
@@ -45,7 +47,8 @@
                             class="form-control" formControlName="amount">
                         </div>
                         <div class="col-xl-2">
-                            <button type="button" class="btn btn-danger">X</button>
+                            <button type="button" class="btn btn-danger" 
+                            (click)="onDeleteIngredient(i)">X</button>
                         </div>
                     </div>
                 </div>
