--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -8,12 +8,11 @@
         <h1>{{ recipe.name }}</h1>
     </div>
 </div>
-<hr>
 <div class="raw">
     <div class="col-xl-12 text-center">
-        <button class="btn-sm btn-success" (click)="onAddToShppingList()">Shopping list</button>
-        <button class="btn-sm btn-secondary" [routerLink]="['edit']" routerLinkActive="router-link-active" >Edit Recipe</button>
-        <button class="btn-sm btn-danger" (click)="onDeleteRecipe()">Delete Recipe</button>
+        <button class="btn btn-sm btn-success" (click)="onAddToShppingList()">Shopping list</button>
+        <button class="btn btn-sm btn-primary" [routerLink]="['edit']" routerLinkActive="router-link-active" >Edit Recipe</button>
+        <button class="btn btn-sm btn-danger" (click)="onDeleteRecipe()">Delete Recipe</button>
     </div>
 </div>
 <hr>
