--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,27 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Recipee Book</a>
+            <a type="button" class="navbar-brand">Recipee Book</a>
         </div>
 
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/recipes']" routerLinkActive="router-link-active" >Recipe List</a>
+                <li class="nav-item" *ngIf="isAuthenticated">
+                    <a class="nav-link" [routerLink]="['/recipes']" routerLinkActive="active" >Recipe List</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/shopping-list']" routerLinkActive="router-link-active" >Shopping List</a>
+                <li class="nav-item" *ngIf="isAuthenticated">
+                    <a class="nav-link" [routerLink]="['/shopping-list']" routerLinkActive="active" >Shopping List</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAuthenticated">
                     <a class="nav-link" (click)="saveDataOnFirebase()" type="button">Save Data</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAuthenticated">
                     <a class="nav-link" (click)="fetchDataOnFirebase()" type="button">Fetch Data</a>
+                </li>
+                <li class="nav-item" (click)="onLogin()">
+                    <button class="btn btn-sm btn-secondary" type="button">{{ isAuthenticated ? "Logout" : "Login" }}</button>
                 </li>
             </ul>
         </div>
